--- a/arena.html
+++ b/arena.html
@@ -100,7 +100,7 @@
   <script src="js/worlds/world_Custom.js"></script>
   <script src="js/worlds/world_Football.js"></script>
   <script src="js/worlds/extra/world_Image.js"></script>
-  <script src="js/robotComponents.js"></script>
+  <script src="js/robotComponents.js?v=2"></script>
   <script src="js/robotTemplates.js"></script>
   <script src="js/Wheel.js?v=3"></script>
   <script src="js/Robot.js?v=3"></script>
