--- a/arenaFrame.html
+++ b/arenaFrame.html
@@ -36,7 +36,7 @@
     </div>
   </main>
 
-  <script src="js/robotComponents.js"></script>
+  <script src="js/robotComponents.js?v=2"></script>
   <script src="js/skulpt.js"></script>
   <script>
     function readGET(name) {
