--- a/builder.html
+++ b/builder.html
@@ -83,7 +83,7 @@
 
   <script src="js/worlds/World_Base.js"></script>
   <script src="js/worlds/world_Custom.js"></script>
-  <script src="js/robotComponents.js"></script>
+  <script src="js/robotComponents.js?v=2"></script>
   <script src="js/robotTemplates.js"></script>
   <script src="js/Wheel.js?v=3"></script>
   <script src="js/Robot.js?v=3"></script>
