--- a/configurator.html
+++ b/configurator.html
@@ -80,7 +80,7 @@
   </main>
 
   <script src="js/worlds/world_Configurator.js"></script>
-  <script src="js/robotComponents.js"></script>
+  <script src="js/robotComponents.js?v=2"></script>
   <script src="js/robotTemplates.js"></script>
   <script src="js/Wheel.js?v=3"></script>
   <script src="js/Robot.js?v=3"></script>
