--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   <script src="js/worlds/world_Football.js"></script>
   <script src="js/worlds/world_Arena.js"></script>
   <script src="js/worlds/extra/world_challenges.js"></script>
-  <script src="js/robotComponents.js"></script>
+  <script src="js/robotComponents.js?v=2"></script>
   <script src="js/robotTemplates.js"></script>
   <script src="js/Wheel.js?v=3"></script>
   <script src="js/Robot.js?v=3"></script>
