Fix zone scoring: track scored objects, separate timer stop from scoring state
Objects in zone no longer re-score on cooldown expiry. Each object
scores exactly once per zone via scoredMeshIds tracking. stopTimer
threshold action now sets timerStopped flag instead of killing
scoreState.running, so the timer freezes but scoring continues.

--- a/builder.html
+++ b/builder.html
@@ -81,7 +81,7 @@
     </div>
   </main>
 
-  <script src="js/worlds/World_Base.js"></script>
+  <script src="js/worlds/World_Base.js?v=2"></script>
   <script src="js/worlds/world_Custom.js"></script>
   <script src="js/robotComponents.js?v=2"></script>
   <script src="js/robotTemplates.js"></script>
