--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   <script src="js/pybricks_generator.js"></script>
   <script src="js/blockly.js"></script>
   <script src="js/skulpt.js"></script>
-  <script src="js/worlds/World_Base.js"></script>
+  <script src="js/worlds/World_Base.js?v=2"></script>
   <script src="js/worlds/world_Grid.js"></script>
   <script src="js/worlds/world_LineFollowing.js"></script>
   <script src="js/worlds/world_Gyro.js"></script>
