Add BattleBots Arena world with HP tracking, collisions, and browse shared bots
New world_BattleBots.js: octagonal arena platform with cage visuals,
HP/damage system based on collision velocity, ring-out detection,
spark particle effects, screen shake, HP bar scoreboard, and
configurable starting HP / time limit.

Arena frame gets a Browse Shared Bots button that fetches published
battlebots from the platform API and loads them into robot slots.

--- a/arena.html
+++ b/arena.html
@@ -99,6 +99,7 @@
   <script src="js/worlds/world_Arena.js"></script>
   <script src="js/worlds/world_Custom.js"></script>
   <script src="js/worlds/world_Football.js"></script>
+  <script src="js/worlds/world_BattleBots.js"></script>
   <script src="js/worlds/extra/world_Image.js"></script>
   <script src="js/robotComponents.js?v=2"></script>
   <script src="js/robotTemplates.js"></script>
